# pattern-dev

./: .gitignore  LICENCE  generate.py  pyproject.toml
tests/: generate_test.py
